welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: '(' expected but identifier found.
if getIndication()=='R'{
   ^BDRBuggle:12: error: '(' expected but identifier found.
if getIndication()=='L'{
   ^BDRBuggle:17: error: '(' expected but identifier found.
if getIndication()=='I'{
   ^BDRBuggle:24: error: '(' expected but identifier found.
if getIndication()=='A'{
   ^BDRBuggle:29: error: '(' expected but identifier found.
if getIndication()=='B'{
   ^BDRBuggle:34: error: '(' expected but identifier found.
if getIndication()=='C'{
   ^BDRBuggle:40: error: '(' expected but identifier found.
if getIndication()=='Z'{
   ^BDRBuggle:45: error: '(' expected but identifier found.
if getIndication()=='Y'{
   ^BDRBuggle:50: error: '(' expected but identifier found.
if getIndication()=='X'{
   ^BDRBuggle:60: error: illegal start of simple expression
}  
^